change the README and the name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-ascensor-route",
+  "name": "loader",
   "version": "0.0.0",
   "description": "template to start with angularjs",
   "main": "Gruntfile.js",
